moved WindowTester tests to a separate profile